{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 46,
  "lineage": "3640be97-a838-01d4-39a8-c007e64534d1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590184105019:security-group/sg-0fcbf42574afb53ac",
            "description": "chiholee-common-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fcbf42574afb53ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow all inbound traffic from self",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "chiholee-common-sg",
            "name_prefix": "",
            "owner_id": "590184105019",
            "revoke_rules_on_delete": false,
            "tags": {
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "identifier": "chiholee",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-095afbb6cddca85da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590184105019:security-group/sg-0365dbb53d6700da8",
            "description": "Control traffic to/from RDS Aurora chiholee",
            "egress": [],
            "id": "sg-0365dbb53d6700da8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "chiholee-db-sg-20240620005714853400000007",
            "name_prefix": "chiholee-db-sg-",
            "owner_id": "590184105019",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chiholee-db-sg",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-db-sg",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-095afbb6cddca85da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc_ingress",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24",
              "10.0.1.0/24"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-3448869344",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0365dbb53d6700da8",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aurora.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-028bfe816eed2c9b1",
            "arn": "arn:aws:ec2:ap-northeast-2:590184105019:elastic-ip/eipalloc-028bfe816eed2c9b1",
            "association_id": "eipassoc-06b6ed5468ffd179b",
            "domain": "vpc",
            "id": "eipalloc-028bfe816eed2c9b1",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0f6ec58c7d3bbe4b2",
            "private_dns": "ip-10-0-4-245.ap-northeast-2.compute.internal",
            "private_ip": "10.0.4.245",
            "public_dns": "ec2-3-39-5-59.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.5.59",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "chiholee-ap-northeast-2a",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-ap-northeast-2a",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590184105019:internet-gateway/igw-02ce4b9c7a22325dd",
            "id": "igw-02ce4b9c7a22325dd",
            "owner_id": "590184105019",
            "tags": {
              "Name": "chiholee",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "vpc_id": "vpc-095afbb6cddca85da"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-028bfe816eed2c9b1",
            "association_id": "eipassoc-06b6ed5468ffd179b",
            "connectivity_type": "public",
            "id": "nat-0671443847707a3f7",
            "network_interface_id": "eni-0f6ec58c7d3bbe4b2",
            "private_ip": "10.0.4.245",
            "public_ip": "3.39.5.59",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0245a0e315fb768c6",
            "tags": {
              "Name": "chiholee-ap-northeast-2a",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-ap-northeast-2a",
              "identifier": "chiholee",
              "terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0916c0b2dcc79938e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0671443847707a3f7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0916c0b2dcc79938e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02ce4b9c7a22325dd",
            "id": "r-rtb-092419094f99e75971080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-092419094f99e7597",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590184105019:route-table/rtb-0916c0b2dcc79938e",
            "id": "rtb-0916c0b2dcc79938e",
            "owner_id": "590184105019",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0671443847707a3f7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chiholee-private",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-private",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-095afbb6cddca85da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590184105019:route-table/rtb-092419094f99e7597",
            "id": "rtb-092419094f99e7597",
            "owner_id": "590184105019",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ce4b9c7a22325dd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chiholee-public",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-public",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-095afbb6cddca85da"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adb948a2e64234e4",
            "route_table_id": "rtb-0916c0b2dcc79938e",
            "subnet_id": "subnet-05cca2c4245d18927"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca2524ba15a676af",
            "route_table_id": "rtb-0916c0b2dcc79938e",
            "subnet_id": "subnet-04536c14d9e724539"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee0a1f6dfbbcb1d5",
            "route_table_id": "rtb-0916c0b2dcc79938e",
            "subnet_id": "subnet-0e12febeba8dd7e3c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02de6746510281d36",
            "route_table_id": "rtb-0916c0b2dcc79938e",
            "subnet_id": "subnet-018220f9a3cc9137c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cce900f112d2c5a9",
            "route_table_id": "rtb-092419094f99e7597",
            "subnet_id": "subnet-0245a0e315fb768c6"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0630dcbfb8642c6bb",
            "route_table_id": "rtb-092419094f99e7597",
            "subnet_id": "subnet-0b9972392a5b7d1f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590184105019:subnet/subnet-05cca2c4245d18927",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cca2c4245d18927",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184105019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chiholee-db-ap-northeast-2a",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-db-ap-northeast-2a",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "vpc_id": "vpc-095afbb6cddca85da"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590184105019:subnet/subnet-04536c14d9e724539",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04536c14d9e724539",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184105019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chiholee-db-ap-northeast-2b",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-db-ap-northeast-2b",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "vpc_id": "vpc-095afbb6cddca85da"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590184105019:subnet/subnet-0e12febeba8dd7e3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e12febeba8dd7e3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184105019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chiholee-private-ap-northeast-2a",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-private-ap-northeast-2a",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "vpc_id": "vpc-095afbb6cddca85da"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590184105019:subnet/subnet-018220f9a3cc9137c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018220f9a3cc9137c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184105019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chiholee-private-ap-northeast-2b",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-private-ap-northeast-2b",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "vpc_id": "vpc-095afbb6cddca85da"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590184105019:subnet/subnet-0245a0e315fb768c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0245a0e315fb768c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590184105019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chiholee-public-ap-northeast-2a",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-public-ap-northeast-2a",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "vpc_id": "vpc-095afbb6cddca85da"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590184105019:subnet/subnet-0b9972392a5b7d1f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9972392a5b7d1f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590184105019",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chiholee-public-ap-northeast-2b",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-public-ap-northeast-2b",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "vpc_id": "vpc-095afbb6cddca85da"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:590184105019:vpc/vpc-095afbb6cddca85da",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e7c7ff31bf7bdd80",
            "default_route_table_id": "rtb-087038cd3658598ab",
            "default_security_group_id": "sg-04cdc2d661262628f",
            "dhcp_options_id": "dopt-0b8d7989a0721cc36",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-095afbb6cddca85da",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-087038cd3658598ab",
            "owner_id": "590184105019",
            "tags": {
              "Name": "chiholee",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee",
              "identifier": "chiholee",
              "terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}